# should-it-compile.rs

./: Cargo.toml  README.md
src/: lib.rs
